syntax = "proto3";

package foodaid.delivery;

option java_multiple_files = true;
option java_package = "grpc.foodaid.Deliver";
option java_outer_classname = "FoodaidImpl";

// Client‚Äêstreaming RPC: submit delivery orders
service DeliveryService {
  rpc SubmitDeliveries(stream DeliveryOrder) returns (DeliveryPlan);
}

message DeliveryOrder {
  int32 id = 1;                // unique identifier
  string recipient = 2;        // recipient identifier
  string delivery_address = 3; // delivery address
  string food_type = 4;        // type of food
  int32 quantity = 5;          // quantity requested
}

message DeliveryPlan {	
  int32 total_deliveries = 1; // count of orders
  string delivery_agent = 2;  // assigned agent
  repeated string route = 3;  // ordered list of addresses
}
